Update library installation method in notebook
Replaced individual library installations with a requirements file.

--- a/ML-in-Investing.ipynb
+++ b/ML-in-Investing.ipynb
@@ -117,14 +117,7 @@
       ],
       "source": [
         "# Download libraries required\n",
-        "!pip install yfinance\n",
-        "!pip install pandas\n",
-        "!pip install numpy\n",
-        "!pip install matplotlib\n",
-        "!pip install seaborn\n",
-        "!pip install shap\n",
-        "!pip install ta\n",
-        "!pip install scikit-learn\n",
+        "!pip install -r requirements.txt -q,
         "\n",
         "import yfinance as yf   # Yahoo Finance\n",
         "import pandas as pd\n",
